@@ -1,5 +1,9 @@
 package org.asciidoctor.maven.site.parser;
 
+import java.io.StringWriter;
+import java.util.Arrays;
+import java.util.List;
+
 import org.apache.maven.doxia.sink.Sink;
 import org.asciidoctor.ast.Document;
 import org.asciidoctor.ast.ListItem;
@@ -11,9 +15,6 @@ import org.asciidoctor.jruby.ast.impl.TableImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-
-import java.io.StringWriter;
-import java.util.Arrays;
 
 import static org.asciidoctor.maven.site.parser.processors.test.ReflectionUtils.extractField;
 import static org.asciidoctor.maven.site.parser.processors.test.TestNodeProcessorFactory.createSink;
@@ -72,7 +73,7 @@ class NodeSinkerTest {
     void should_process_preamble_node() {
         StructuralNode mockNode = mockNode("preamble");
         StructuralNode literalBlock = mockNode("literal", BlockImpl.class);
-        Mockito.when(mockNode.getBlocks()).thenReturn(Arrays.asList(literalBlock));
+        Mockito.when(mockNode.getBlocks()).thenReturn(List.of(literalBlock));
 
         nodesSinker.processNode(mockNode);
 
@@ -122,6 +123,7 @@ class NodeSinkerTest {
     @Test
     void should_process_image_node() {
         StructuralNode mockNode = mockNode("image", BlockImpl.class);
+        Mockito.when(mockNode.getAttribute(Mockito.eq("target"))).thenReturn("image.png");
 
         nodesSinker.processNode(mockNode);
 
@@ -142,7 +144,7 @@ class NodeSinkerTest {
         StructuralNode mockNode = mockNode("ulist", BlockImpl.class);
         ListItem mockListItem = mockNode("list_item", ListItem.class);
         Mockito.when(mockListItem.getMarker()).thenReturn("*");
-        Mockito.when(mockNode.getBlocks()).thenReturn(Arrays.asList(mockListItem));
+        Mockito.when(mockNode.getBlocks()).thenReturn(List.of(mockListItem));
 
         nodesSinker.processNode(mockNode);
 
@@ -154,7 +156,7 @@ class NodeSinkerTest {
         StructuralNode mockNode = mockNode("olist", BlockImpl.class);
         ListItem mockListItem = mockNode("list_item", ListItem.class);
         Mockito.when(mockListItem.getMarker()).thenReturn(".");
-        Mockito.when(mockNode.getBlocks()).thenReturn(Arrays.asList(mockListItem));
+        Mockito.when(mockNode.getBlocks()).thenReturn(List.of(mockListItem));
 
         nodesSinker.processNode(mockNode);
 
